src/k8s-deployments/deployments/deploy-app-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: 123654789456123654789/ms-coffee-user:v11
        ports:
        - containerPort: 5678
