src/k8s-deployments/deployments/deploy-app-2.yaml
  
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: 123654789456123654789/ms-coffee-consumer:v6
        ports:
        - containerPort: 5678
